pushing to fix the color not showing up issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 :root {
   --primary: oklch(0.205 0 0);
   --secondary: oklch(0.97 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: #703EFF;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -64,7 +64,7 @@ body {
   --foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
   --secondary: oklch(0.269 0 0);
-  --accent: oklch(0.269 0 0);
+  --accent: #703EFF;
   --border: oklch(1 0 0 / 10%);
   --ring: oklch(0.556 0 0);
 }
